src/y.output
Terminals which are not used

   REALDIV
   MOD
   CASE


State 132 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_head routine DOT

    2 program_head: PROGRAM id SEMI

    3 routine: routine_head routine_body

    4 routine_head: label_part const_part type_part var_part routine_part

    5 label_part: /* empty */

    6 const_part: CONST const_expr_list
    7           | /* empty */

    8 const_expr_list: id EQUAL const_value SEMI const_expr_list
    9                | id EQUAL const_value SEMI

   10 const_value: INTEGER
   11            | CHAR
   12            | STRING
   13            | sys_con

   14 type_part: TYPE type_decl_list
   15          | /* empty */

   16 type_decl_list: type_definition type_decl_list
   17               | type_definition

   18 type_definition: id EQUAL type_decl SEMI

   19 type_decl: simple_type_decl
   20          | array_type_decl

   21 simple_type_decl: sys_type
   22                 | id
   23                 | LP name_list RP
   24                 | const_value DOTDOT const_value
   25                 | MINUS const_value DOTDOT const_value
   26                 | MINUS const_value DOTDOT MINUS const_value
   27                 | id DOTDOT id

   28 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   29 name_list: name_list COMMA id
   30          | id

   31 var_part: VAR var_decl_list
   32         | /* empty */

   33 var_decl_list: var_decl var_decl_list
   34              | var_decl

   35 var_decl: name_list COLON type_decl SEMI

   36 routine_part: function_decl routine_part
   37             | procedure_decl routine_part
   38             | /* empty */

   39 function_decl: function_head SEMI sub_routine SEMI

   40 function_head: FUNCTION id parameters COLON simple_type_decl

   41 procedure_decl: procedure_head SEMI sub_routine SEMI

   42 procedure_head: PROCEDURE id parameters

   43 sub_routine: routine_head routine_body

   44 parameters: LP para_decl_list RP
   45           | /* empty */

   46 para_decl_list: para_decl_list SEMI para_type_list
   47               | para_type_list

   48 para_type_list: var_para_list COLON simple_type_decl
   49               | val_para_list COLON simple_type_decl

   50 var_para_list: VAR name_list

   51 val_para_list: name_list

   52 routine_body: compound_stmt

   53 compound_stmt: BEGIN_T stmt_list END

   54 stmt_list: stmt SEMI stmt_list
   55          | /* empty */
   56          | stat

   57 stmt: INTEGER COLON non_label_stmt
   58     | non_label_stmt

   59 non_label_stmt: assign_stmt
   60               | proc_stmt
   61               | compound_stmt
   62               | if_stmt
   63               | repeat_stmt
   64               | while_stmt
   65               | for_stmt
   66               | goto_stmt

   67 assign_stmt: id ASSIGN expression
   68            | id LB expression RB ASSIGN expression

   69 proc_stmt: id
   70          | id LP args_list RP
   71          | sys_proc
   72          | sys_proc LP expression_list RP
   73          | READ LP factor RP

   74 if_stmt: IF expression THEN stmt else_clause

   75 else_clause: ELSE stmt
   76            | /* empty */

   77 repeat_stmt: REPEAT stmt UNTIL expression

   78 while_stmt: WHILE expression DO stmt

   79 for_stmt: FOR id ASSIGN expression direction expression DO stmt

   80 direction: TO
   81          | DOWNTO

   82 goto_stmt: GOTO INTEGER

   83 expression_list: expression COMMA expression_list
   84                | expression

   85 expression: expression GE expr
   86           | expression GT expr
   87           | expression LE expr
   88           | expression LT expr
   89           | expression EQUAL expr
   90           | expression UNEQUAL expr
   91           | expr

   92 expr: expr PLUS term
   93     | expr MINUS term
   94     | expr OR term
   95     | term

   96 term: term MUL factor
   97     | term INTDIV factor
   98     | term AND factor
   99     | factor

  100 factor: id
  101       | id LP args_list RP
  102       | sys_funct
  103       | sys_funct LP args_list RP
  104       | const_value
  105       | LP expression RP
  106       | NOT factor
  107       | MINUS factor
  108       | id LB expression RB
  109       | id DOT id

  110 args_list: args_list COMMA expression
  111          | expression

  112 id: ID

  113 sys_con: SYS_CON

  114 sys_funct: SYS_FUNCT

  115 sys_proc: SYS_PROC

  116 sys_type: SYS_TYPE

  117 stat: error SEMI


Terminals, with rules where they appear

$end (0) 0
error (256) 117
LP (258) 23 44 70 72 73 101 103 105
RP (259) 23 44 70 72 73 101 103 105
LB (260) 28 68 108
RB (261) 28 68 108
DOT (262) 1 109
COMMA (263) 29 83 110
COLON (264) 35 40 48 49 57
SEMI (265) 2 8 9 18 35 39 41 46 54 117
PLUS (266) 92
MINUS (267) 25 26 93 107
MUL (268) 96
REALDIV (269)
INTDIV (270) 97
MOD (271)
AND (272) 98
OR (273) 94
NOT (274) 106
GE (275) 85
GT (276) 86
LE (277) 87
LT (278) 88
EQUAL (279) 8 9 18 89
UNEQUAL (280) 90
ASSIGN (281) 67 68 79
PROGRAM (282) 2
FUNCTION (283) 40
PROCEDURE (284) 42
BEGIN_T (285) 53
END (286) 53
TYPE (287) 14
ARRAY (288) 28
OF (289) 28
VAR (290) 31 50
IF (291) 74
THEN (292) 74
ELSE (293) 75
REPEAT (294) 77
TO (295) 80
DOWNTO (296) 81
UNTIL (297) 77
WHILE (298) 78
DO (299) 78 79
FOR (300) 79
CASE (301)
GOTO (302) 82
READ (303) 73
CONST (304) 6
DOTDOT (305) 24 25 26 27
INTEGER (306) 10 57 82
CHAR (307) 11
ID (308) 112
STRING (309) 12
SYS_CON (310) 113
SYS_FUNCT (311) 114
SYS_PROC (312) 115
SYS_TYPE (313) 116


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1, on right: 0
program_head (61)
    on left: 2, on right: 1
routine (62)
    on left: 3, on right: 1
routine_head (63)
    on left: 4, on right: 3 43
label_part (64)
    on left: 5, on right: 4
const_part (65)
    on left: 6 7, on right: 4
const_expr_list (66)
    on left: 8 9, on right: 6 8
const_value (67)
    on left: 10 11 12 13, on right: 8 9 24 25 26 104
type_part (68)
    on left: 14 15, on right: 4
type_decl_list (69)
    on left: 16 17, on right: 14 16
type_definition (70)
    on left: 18, on right: 16 17
type_decl (71)
    on left: 19 20, on right: 18 28 35
simple_type_decl (72)
    on left: 21 22 23 24 25 26 27, on right: 19 28 40 48 49
array_type_decl (73)
    on left: 28, on right: 20
name_list (74)
    on left: 29 30, on right: 23 29 35 50 51
var_part (75)
    on left: 31 32, on right: 4
var_decl_list (76)
    on left: 33 34, on right: 31 33
var_decl (77)
    on left: 35, on right: 33 34
routine_part (78)
    on left: 36 37 38, on right: 4 36 37
function_decl (79)
    on left: 39, on right: 36
function_head (80)
    on left: 40, on right: 39
procedure_decl (81)
    on left: 41, on right: 37
procedure_head (82)
    on left: 42, on right: 41
sub_routine (83)
    on left: 43, on right: 39 41
parameters (84)
    on left: 44 45, on right: 40 42
para_decl_list (85)
    on left: 46 47, on right: 44 46
para_type_list (86)
    on left: 48 49, on right: 46 47
var_para_list (87)
    on left: 50, on right: 48
val_para_list (88)
    on left: 51, on right: 49
routine_body (89)
    on left: 52, on right: 3 43
compound_stmt (90)
    on left: 53, on right: 52 61
stmt_list (91)
    on left: 54 55 56, on right: 53 54
stmt (92)
    on left: 57 58, on right: 54 74 75 77 78 79
non_label_stmt (93)
    on left: 59 60 61 62 63 64 65 66, on right: 57 58
assign_stmt (94)
    on left: 67 68, on right: 59
proc_stmt (95)
    on left: 69 70 71 72 73, on right: 60
if_stmt (96)
    on left: 74, on right: 62
else_clause (97)
    on left: 75 76, on right: 74
repeat_stmt (98)
    on left: 77, on right: 63
while_stmt (99)
    on left: 78, on right: 64
for_stmt (100)
    on left: 79, on right: 65
direction (101)
    on left: 80 81, on right: 79
goto_stmt (102)
    on left: 82, on right: 66
expression_list (103)
    on left: 83 84, on right: 72 83
expression (104)
    on left: 85 86 87 88 89 90 91, on right: 67 68 74 77 78 79 83 84
    85 86 87 88 89 90 105 108 110 111
expr (105)
    on left: 92 93 94 95, on right: 85 86 87 88 89 90 91 92 93 94
term (106)
    on left: 96 97 98 99, on right: 92 93 94 95 96 97 98
factor (107)
    on left: 100 101 102 103 104 105 106 107 108 109,
    on right: 73 96 97 98 99 106 107
args_list (108)
    on left: 110 111, on right: 70 101 103 110
id (109)
    on left: 112, on right: 2 8 9 18 22 27 29 30 40 42 67 68 69 70
    79 100 101 108 109
sys_con (110)
    on left: 113, on right: 13
sys_funct (111)
    on left: 114, on right: 102 103
sys_proc (112)
    on left: 115, on right: 71 72
sys_type (113)
    on left: 116, on right: 21
stat (114)
    on left: 117, on right: 56


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program       go to state 2
    program_head  go to state 3


state 1

    2 program_head: PROGRAM . id SEMI

    ID  shift, and go to state 4

    id  go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: program_head . routine DOT

    $default  reduce using rule 5 (label_part)

    routine       go to state 7
    routine_head  go to state 8
    label_part    go to state 9


state 4

  112 id: ID .

    $default  reduce using rule 112 (id)


state 5

    2 program_head: PROGRAM id . SEMI

    SEMI  shift, and go to state 10


state 6

    0 $accept: program $end .

    $default  accept


state 7

    1 program: program_head routine . DOT

    DOT  shift, and go to state 11


state 8

    3 routine: routine_head . routine_body

    BEGIN_T  shift, and go to state 12

    routine_body   go to state 13
    compound_stmt  go to state 14


state 9

    4 routine_head: label_part . const_part type_part var_part routine_part

    CONST  shift, and go to state 15

    $default  reduce using rule 7 (const_part)

    const_part  go to state 16


state 10

    2 program_head: PROGRAM id SEMI .

    $default  reduce using rule 2 (program_head)


state 11

    1 program: program_head routine DOT .

    $default  reduce using rule 1 (program)


state 12

   53 compound_stmt: BEGIN_T . stmt_list END

    error     shift, and go to state 17
    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 18
    REPEAT    shift, and go to state 19
    WHILE     shift, and go to state 20
    FOR       shift, and go to state 21
    GOTO      shift, and go to state 22
    READ      shift, and go to state 23
    INTEGER   shift, and go to state 24
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 25

    END  reduce using rule 55 (stmt_list)

    compound_stmt   go to state 26
    stmt_list       go to state 27
    stmt            go to state 28
    non_label_stmt  go to state 29
    assign_stmt     go to state 30
    proc_stmt       go to state 31
    if_stmt         go to state 32
    repeat_stmt     go to state 33
    while_stmt      go to state 34
    for_stmt        go to state 35
    goto_stmt       go to state 36
    id              go to state 37
    sys_proc        go to state 38
    stat            go to state 39


state 13

    3 routine: routine_head routine_body .

    $default  reduce using rule 3 (routine)


state 14

   52 routine_body: compound_stmt .

    $default  reduce using rule 52 (routine_body)


state 15

    6 const_part: CONST . const_expr_list

    ID  shift, and go to state 4

    const_expr_list  go to state 40
    id               go to state 41


state 16

    4 routine_head: label_part const_part . type_part var_part routine_part

    TYPE  shift, and go to state 42

    $default  reduce using rule 15 (type_part)

    type_part  go to state 43


state 17

  117 stat: error . SEMI

    SEMI  shift, and go to state 44


state 18

   74 if_stmt: IF . expression THEN stmt else_clause

    LP         shift, and go to state 45
    MINUS      shift, and go to state 46
    NOT        shift, and go to state 47
    INTEGER    shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  go to state 53
    expression   go to state 54
    expr         go to state 55
    term         go to state 56
    factor       go to state 57
    id           go to state 58
    sys_con      go to state 59
    sys_funct    go to state 60


state 19

   77 repeat_stmt: REPEAT . stmt UNTIL expression

    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 18
    REPEAT    shift, and go to state 19
    WHILE     shift, and go to state 20
    FOR       shift, and go to state 21
    GOTO      shift, and go to state 22
    READ      shift, and go to state 23
    INTEGER   shift, and go to state 24
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 25

    compound_stmt   go to state 26
    stmt            go to state 61
    non_label_stmt  go to state 29
    assign_stmt     go to state 30
    proc_stmt       go to state 31
    if_stmt         go to state 32
    repeat_stmt     go to state 33
    while_stmt      go to state 34
    for_stmt        go to state 35
    goto_stmt       go to state 36
    id              go to state 37
    sys_proc        go to state 38


state 20

   78 while_stmt: WHILE . expression DO stmt

    LP         shift, and go to state 45
    MINUS      shift, and go to state 46
    NOT        shift, and go to state 47
    INTEGER    shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  go to state 53
    expression   go to state 62
    expr         go to state 55
    term         go to state 56
    factor       go to state 57
    id           go to state 58
    sys_con      go to state 59
    sys_funct    go to state 60


state 21

   79 for_stmt: FOR . id ASSIGN expression direction expression DO stmt

    ID  shift, and go to state 4

    id  go to state 63


state 22

   82 goto_stmt: GOTO . INTEGER

    INTEGER  shift, and go to state 64


state 23

   73 proc_stmt: READ . LP factor RP

    LP  shift, and go to state 65


state 24

   57 stmt: INTEGER . COLON non_label_stmt

    COLON  shift, and go to state 66


state 25

  115 sys_proc: SYS_PROC .

    $default  reduce using rule 115 (sys_proc)


state 26

   61 non_label_stmt: compound_stmt .

    $default  reduce using rule 61 (non_label_stmt)


state 27

   53 compound_stmt: BEGIN_T stmt_list . END

    END  shift, and go to state 67


state 28

   54 stmt_list: stmt . SEMI stmt_list

    SEMI  shift, and go to state 68


state 29

   58 stmt: non_label_stmt .

    $default  reduce using rule 58 (stmt)


state 30

   59 non_label_stmt: assign_stmt .

    $default  reduce using rule 59 (non_label_stmt)


state 31

   60 non_label_stmt: proc_stmt .

    $default  reduce using rule 60 (non_label_stmt)


state 32

   62 non_label_stmt: if_stmt .

    $default  reduce using rule 62 (non_label_stmt)


state 33

   63 non_label_stmt: repeat_stmt .

    $default  reduce using rule 63 (non_label_stmt)


state 34

   64 non_label_stmt: while_stmt .

    $default  reduce using rule 64 (non_label_stmt)


state 35

   65 non_label_stmt: for_stmt .

    $default  reduce using rule 65 (non_label_stmt)


state 36

   66 non_label_stmt: goto_stmt .

    $default  reduce using rule 66 (non_label_stmt)


state 37

   67 assign_stmt: id . ASSIGN expression
   68            | id . LB expression RB ASSIGN expression
   69 proc_stmt: id .
   70          | id . LP args_list RP

    LP      shift, and go to state 69
    LB      shift, and go to state 70
    ASSIGN  shift, and go to state 71

    $default  reduce using rule 69 (proc_stmt)


state 38

   71 proc_stmt: sys_proc .
   72          | sys_proc . LP expression_list RP

    LP  shift, and go to state 72

    $default  reduce using rule 71 (proc_stmt)


state 39

   56 stmt_list: stat .

    $default  reduce using rule 56 (stmt_list)


state 40

    6 const_part: CONST const_expr_list .

    $default  reduce using rule 6 (const_part)


state 41

    8 const_expr_list: id . EQUAL const_value SEMI const_expr_list
    9                | id . EQUAL const_value SEMI

    EQUAL  shift, and go to state 73


state 42

   14 type_part: TYPE . type_decl_list

    ID  shift, and go to state 4

    type_decl_list   go to state 74
    type_definition  go to state 75
    id               go to state 76


state 43

    4 routine_head: label_part const_part type_part . var_part routine_part

    VAR  shift, and go to state 77

    $default  reduce using rule 32 (var_part)

    var_part  go to state 78


state 44

  117 stat: error SEMI .

    $default  reduce using rule 117 (stat)


state 45

  105 factor: LP . expression RP

    LP         shift, and go to state 45
    MINUS      shift, and go to state 46
    NOT        shift, and go to state 47
    INTEGER    shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  go to state 53
    expression   go to state 79
    expr         go to state 55
    term         go to state 56
    factor       go to state 57
    id           go to state 58
    sys_con      go to state 59
    sys_funct    go to state 60


state 46

  107 factor: MINUS . factor

    LP         shift, and go to state 45
    MINUS      shift, and go to state 46
    NOT        shift, and go to state 47
    INTEGER    shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  go to state 53
    factor       go to state 80
    id           go to state 58
    sys_con      go to state 59
    sys_funct    go to state 60


state 47

  106 factor: NOT . factor

    LP         shift, and go to state 45
    MINUS      shift, and go to state 46
    NOT        shift, and go to state 47
    INTEGER    shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  go to state 53
    factor       go to state 81
    id           go to state 58
    sys_con      go to state 59
    sys_funct    go to state 60


state 48

   10 const_value: INTEGER .

    $default  reduce using rule 10 (const_value)


state 49

   11 const_value: CHAR .

    $default  reduce using rule 11 (const_value)


state 50

   12 const_value: STRING .

    $default  reduce using rule 12 (const_value)


state 51

  113 sys_con: SYS_CON .

    $default  reduce using rule 113 (sys_con)


state 52

  114 sys_funct: SYS_FUNCT .

    $default  reduce using rule 114 (sys_funct)


state 53

  104 factor: const_value .

    $default  reduce using rule 104 (factor)


state 54

   74 if_stmt: IF expression . THEN stmt else_clause
   85 expression: expression . GE expr
   86           | expression . GT expr
   87           | expression . LE expr
   88           | expression . LT expr
   89           | expression . EQUAL expr
   90           | expression . UNEQUAL expr

    GE       shift, and go to state 82
    GT       shift, and go to state 83
    LE       shift, and go to state 84
    LT       shift, and go to state 85
    EQUAL    shift, and go to state 86
    UNEQUAL  shift, and go to state 87
    THEN     shift, and go to state 88


state 55

   91 expression: expr .
   92 expr: expr . PLUS term
   93     | expr . MINUS term
   94     | expr . OR term

    PLUS   shift, and go to state 89
    MINUS  shift, and go to state 90
    OR     shift, and go to state 91

    $default  reduce using rule 91 (expression)


state 56
